home changes stylecss comm

--- a/css/style.css
+++ b/css/style.css
@@ -2444,7 +2444,7 @@ button:hover {
     color: #fff !important;
 }
 
-
+/* jdu */
 .grid-item img,
 .grid-item iframe {
     /*filter: grayscale(100%) contrast(120%);*/
