--- a/css/style.css
+++ b/css/style.css
@@ -3329,7 +3329,7 @@ textarea.input1 {
     font-size: 24px !important;
     margin-top: 20px;
     font-weight: 700;
-    font-family:Altero;
+    font-family: Altero;
     color: #fff;
     position: relative;
     z-index: 22;
@@ -3350,7 +3350,7 @@ textarea.input1 {
 
 
 .work-proc2-a {
-    font-family:Altero;
+    font-family: Altero;
     font-size: 30px;
     font-weight: 600;
     line-height: 40px;
@@ -3404,7 +3404,7 @@ textarea.input1 {
     opacity: 0.4;
     z-index: 0;
     line-height: 1;
-/*    font-family: Poppins, Arial, Helvetica, sans-serif;
+    /*    font-family: Poppins, Arial, Helvetica, sans-serif;
 */
 }
 
@@ -3422,4 +3422,59 @@ textarea.input1 {
 #whatwedo .whatwedo-box3 {
     background: url(../images/whatwedo-box3.jpg) no-repeat;
     background-size: cover;
+}
+
+
+
+
+
+
+
+@media (max-width:575.98px) {
+    #whatwedo .whatwedo-box1 {
+        width: 90%;
+        margin: 0px auto;
+        margin-bottom: 20px;
+
+    }
+
+    #whatwedo .whatwedo-box2 {
+        width: 90%;
+        margin: 0px auto;
+        margin-bottom: 20px;
+
+    }
+
+    #whatwedo .whatwedo-box3 {
+        width: 90%;
+        margin: 0px auto;
+        margin-bottom: 20px;
+
+    }
+
+    .serv-row {
+        width: 100%;
+        margin: 0px auto;
+        margin-bottom: 20px;
+
+    }
+
+    .serviceBox::after {
+        display: none;
+    }
+
+    .serviceBox h3::after {
+        margin-top: 8% !important;
+    }
+
+    #fixed-img h3 {
+       font-size: 14px !important;
+padding: 60px 0 !important;
+    }
+
+    #fixed-img {
+        background-size: cover;
+        z-index: -5;
+
+    }
 }
