gallery-active-color-changes

--- a/css/style.css
+++ b/css/style.css
@@ -3309,7 +3309,7 @@ textarea.input1 {
     position: absolute;
     height: 28px;
     width: 72px;
-    background: #f4f93e;
+    background: #e82340    ; /* #f4f93e;*/
     /*! top: 30px; */
     /*! left: 45%; */
     /*! -webkit-transform: translateX(-50%) translateY(-50%); */
