--- a/css/style.css
+++ b/css/style.css
@@ -1464,7 +1464,7 @@ footer {
     left: 0;
     width: 100%;
     background: #fff;
-    z-index: 6;
+    z-index: 1;
 }
 
 .ms-footer {
@@ -3188,7 +3188,7 @@ textarea.input1 {
 .serviceBox:after {
     position: absolute;
     left: -30px;
-    z-index: 9;
+    z-index: 1;
     bottom: 30px;
     content: '';
     border-right: 30px solid #fff;
@@ -3215,7 +3215,7 @@ textarea.input1 {
 .serviceBox h3:after {
     position: absolute;
     right: 0px;
-    z-index: 9;
+    z-index:1;
     top: 85px;
     content: '';
     border-bottom: 2px solid #000;
@@ -3331,8 +3331,8 @@ textarea.input1 {
     font-weight: 700;
     font-family: Altero;
     color: #fff;
-    position: relative;
-    z-index: 22;
+    /* position: relative;
+    z-index: 22; */
     text-transform: uppercase;
     margin-bottom: 30px;
 }
